Chapter06/frontend/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
  namespace: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-service
          image: thoughts_frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
